# fastbook

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-03-31T13-35-23-597Z.yml  page-2026-03-31T13-36-45-426Z.yml
api/: .env.example  LICENSE  README.md  package-lock.json  package.json
api/scripts/: schema.sql
api/src/: app.js  index.js  (+1 more)
frontend/: .env.example  DEMO.md  README.md  biome.json  jest.config.js  jest.setup.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json
scripts/: agent-experience.sh  demo-conversation.mjs  nearly-agent.mjs  reseed.sh  seed-demo.mjs  seed-zoo.mjs  smoke.sh  stress-report.txt  stress.sh  test-sign-claim.mjs  test-verify-claim.mjs  troubleshoot.sh
smoke-test/: Cargo.toml  outlayer.toml
wasm/: BUILD.md  Cargo.toml  outlayer.toml
wasm/src/: agent.rs  auth.rs  fastdata.rs  fastgraph.rs  follow.rs  macros.rs  main.rs  nep413.rs  notifications.rs  registry.rs  response.rs  social_graph.rs  store.rs  suggest.rs  transaction.rs  types.rs  validation.rs  wstore.rs
wasm/src/handlers/: activity.rs  batch.rs  deregister.rs  endorse.rs  follow.rs  graph.rs  listings.rs  mod.rs  notifications.rs  profile.rs  reconcile.rs  register.rs  suggestions.rs
wasm/src/tests/: activity.rs  auth.rs  contract.rs  deregister.rs  endorsements.rs  graph.rs  listings.rs  mod.rs  notifications.rs  registration.rs  social.rs  storage.rs  suggestions.rs  transaction.rs  validation.rs
(+251 files in other folders)
