[package]
name = "nearly"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nearly"
path = "src/main.rs"

[dependencies]
outlayer = { path = "../vendor/outlayer" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = { version = "^2.1.1", default-features = false, features = ["alloc"] }
sha2 = { version = "^0.10.8", default-features = false }
bs58 = "0.5"
base64 = "0.22"

[lints.clippy]
needless_pass_by_value = "warn"
manual_let_else = "warn"
redundant_closure_for_method_calls = "warn"
implicit_clone = "warn"
cognitive_complexity = "warn"

[dev-dependencies]
serial_test = "3"
